--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -34,26 +34,12 @@ credits="Somebody that I used to know" #optional
 authors="Invoker54" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-A customizable shop that uses the most
-readily available currency in Minecraft: XP!
+A customizable shop that uses the most readily available currency in Minecraft: XP!
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.examplemod]] #optional
-    # the modid of the dependency
-    modId="forge" #mandatory
-    # Does this dependency have to exist - if not, ordering below must be specified
-    mandatory=true #mandatory
-    # The version range of the dependency
-    versionRange="[36,)" #mandatory
-    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
-    ordering="NONE"
-    # Side this dependency is applied on - BOTH, CLIENT or SERVER
-    side="BOTH"
-# Here's another dependency
-[[dependencies.examplemod]]
-    modId="minecraft"
-    mandatory=true
-# This version range declares a minimum of the current minecraft version up to but not including the next major version
-    versionRange="[1.16.5,1.17)"
-    ordering="NONE"
-    side="BOTH"
+[[dependencies.xp_shop]] #optional
+modId="invocore"
+mandatory=true
+versionRange="[1.2.4,)"
+ordering="AFTER"
+side="BOTH"
